--- a/references.bib
+++ b/references.bib
@@ -2704,6 +2704,15 @@
   url		= {https://plotly.com}
 }
 
+@misc{webgl2025,
+	title = {{WebGL: 2D and 3D graphics for the web - Web APIs {$\vert$} MDN}},
+	journal = {MDN Web Docs},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 19. Mar. 2025]},
+	url = {https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API}
+}
+
 @Misc{		  plotly2024b,
   title		= {Webgl},
   author	= {{Plotly Inc.}},
